re PR target/31137 (missing "break" in switch for MULT in avr_rtx_costs)

PR target/31137
	* config/avr/avr.c (avr_rtx_costs): Add missing 'break' statements.

From-SVN: r123437